--- a/mockups/salon/style.css
+++ b/mockups/salon/style.css
@@ -4,6 +4,14 @@ body {
   padding:0;
   margin:0;
 }
+iframe {
+  width:100%;
+  height:100%;
+}
+.contact {
+  width:100vw;
+  height:50vw;
+}
 .navbuttons {
   font-family: "Oswald", sans-serif;
   text-shadow: 2px 2px 5px white;
