--- a/mockups/salon/style.css
+++ b/mockups/salon/style.css
@@ -6,7 +6,18 @@ body {
 }
 iframe {
   width:100%;
-  height:100%;
+  height:100;
+}
+input {
+  width:80%;
+  display:block;
+  font-family:arial;
+   @media only screen and (orientation: portrait) {
+    font-size: 4vw;
+  }
+  @media only screen and (orientation: landscape) {
+    font-size: 1.5vw;
+  }
 }
 .contact {
   width:100vw;
