--- a/mockups/salon/style.css
+++ b/mockups/salon/style.css
@@ -8,15 +8,19 @@ iframe {
   width:100%;
   height:100;
 }
+.google {
+ width:800px !important;
+ height:600px !important;
+}
 input {
   width:80%;
   display:block;
   font-family:arial;
    @media only screen and (orientation: portrait) {
-    font-size: 4vw;
+    font-size: 8vw;
   }
   @media only screen and (orientation: landscape) {
-    font-size: 1.5vw;
+    font-size: 3vw;
   }
 }
 .contact {
