--- a/mockups/salon/style.css
+++ b/mockups/salon/style.css
@@ -1,5 +1,11 @@
-body {
+.mainbody {
   background-image:url("assets/curtain.jpg");
+  background-size:auto 100%;
+  padding:0;
+  margin:0;
+}
+.contactbody {
+  background-color: #B2B2B2;
   background-size:auto 100%;
   padding:0;
   margin:0;
