--- a/mockups/salon/style.css
+++ b/mockups/salon/style.css
@@ -11,6 +11,7 @@
   margin:0;
 }
 iframe {
+  border:none;
   width:100%;
   height:100%;
 }
@@ -31,8 +32,8 @@ input {
 }
 .contact {
    @media only screen and (orientation: portrait) {
-  width:94vw;
-  height:94vw;
+  width:100vw;
+  height:100vw;
   }
   @media only screen and (orientation: landscape) {
   width:64vw;
