--- a/mockups/salon/style.css
+++ b/mockups/salon/style.css
@@ -17,8 +17,8 @@ iframe {
   height:100%;
 }
 .google {
- width:800px !important;
- height:600px !important;
+ width:80vw !important;
+ height:60vw !important;
 }
 input {
   width:80%;
