--- a/mockups/salon/style.css
+++ b/mockups/salon/style.css
@@ -108,7 +108,7 @@ input {
     padding:3vw;
     width:94vw;
 }
-.deskcontent {
+.desklayout {
     text-align: justify;
     background-color: #B2B2B2;
     padding:3vw;
