--- a/mockups/salon/style.css
+++ b/mockups/salon/style.css
@@ -1,3 +1,9 @@
+.deskcontent {
+  width:60%
+}
+.deskcontact {
+  width:40%
+}
 .desklayout {
   @media only screen and (orientation: portrait) {
   display: none;
