--- a/mockups/salon/style.css
+++ b/mockups/salon/style.css
@@ -45,7 +45,7 @@ iframe {
     height:60vw !important;
   }
   @media only screen and (orientation: landscape) {
-    height:160vw !important;
+    height:auto !important;
   }
 }
 input {
