--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@
     .stuff {
         background-color:#000000;
         color:#ffffff;
-        width:100vw;
+        width:100%;
         height:95vh;
     }
     .header, .footer {
