--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
           }
          @media only screen and (orientation: landscape) {
            width:70vw;
-           left:30px;
+           left:30vw;
            }
    }
    a {
