--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
        padding:0;
        margin:0;
    }
-   .rightbar {
+   .rightpanel {
           position:fixed;
           top:0px;
          @media only screen and (orientation: portrait) {
