--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
    .rightpanel {
           position:fixed;
           top:0px;
+          height:100vh;
+          overflow-y:scroll;
          @media only screen and (orientation: portrait) {
           width:100vw;
           left:0px;
