--- a/style.css
+++ b/style.css
@@ -81,12 +81,18 @@
     .sidebar {
         position:fixed;
         top:0;
-        left:0;
         color:#ffffff;
-        width:0vw;
         height:100vh;
         overflow:hidden;
         transition:width 0.5s;
+        @media only screen and (orientation: portrait) {
+        left:0;
+        width:0vw;
+          }
+         @media only screen and (orientation: landscape) {
+           left:0;
+           width:30vw;
+           }
     }
     .sideframe {
         color:#ffffff;
