--- a/style.css
+++ b/style.css
@@ -163,9 +163,14 @@
     .content {
         width:100%;
         height:100%;
-        font-size:4vw;
         font-family:arial;
         text-align:justify;
         color:#ffffff;
+         @media only screen and (orientation: portrait) {
+          font-size:4vw;
+          }
+         @media only screen and (orientation: landscape) {
+              font-size:2vw;
+           }
     }
 
