--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@
          @media only screen and (orientation: landscape) {
            width:70vw;
            left:30vw;
-           top:-45vh;
-           height:145vh;
+           top:0px;
+           height:100vh;
            }
    }
    a {
